--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ body {
 
 .mainDiv{
     background-image: linear-gradient(
-        #f52b2b 1%,
-        rgb(255, 255, 137)
+        #ff4646 1%,
+        rgb(252, 252, 151)
     );
 }
 
 header {
-    background: #f52b2b;
+    background: #ff4646;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -92,6 +92,17 @@ header {
     font-weight: 700;
 }
 
+.pMain {
+    margin-left: 4%;
+    margin-top: 4%;
+    text-align: left;
+}
+
+.imgMain{
+    order: -1;
+    border: 5px solid rgba(0, 0, 0, 0.13); /* Borda preta com 50% de opacidade */
+}
+
 .back-to-top {
     text-decoration: none; /* Remove o sublinhado */
     display: inline-block; /* Garante que o link ocupa apenas o espaço do conteúdo */
@@ -99,13 +110,17 @@ header {
     position: fixed; /* Posicionamento fixo em relação à janela */
     right: 20px; /* Distância da borda direita */
     bottom: 20px; /* Distância da borda inferior */
-    background-color: #ececec; /* Cor de fundo para destacar o botão */
+    background-color: #ececec2f; /* Cor de fundo para destacar o botão */
     padding: 10px; /* Espaçamento interno */
     border-radius: 50%; /* Bordas arredondadas */
     color: black;
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     background: #333;
     color: #fff;
     text-align: center;
@@ -113,6 +128,18 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
+}
+.footer-image {
+    margin-right: 10px; /* Espaçamento entre a imagem e o texto */
+    width: 20%;
+    height: 20%;
+}
+.footer-text {
+    display: flex;
+    flex-direction: column;
+}
+.aContato{
+    text-decoration: none;
 }
 
 @media (max-width: 1250px) {
@@ -152,5 +179,8 @@ footer {
         margin-bottom: 55px; /* Adiciona espaço abaixo do <h1> */
         font-size: 30px;
         font-weight: 700;
+    }
+    .imgMain{
+        border: 3px solid rgba(0, 0, 0, 0.13); /* Borda preta com 50% de opacidade */
     }
   }
